# conveyor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
conveyor/: cli.py  config.py
conveyor/core/: context.py  governance.py  init.py  orchestrator.py  planner.py
conveyor/execution/: adapter.py  branch.py  prompt.py  runner.py
conveyor/tracking/: events.py  markdown.py  models.py
conveyor/validation/: checks.py
docs/: configuration.md  how-it-works.md
docs/plans/: 2026-03-14-conveyor-design.md  2026-03-14-conveyor-implementation.md  base.md
tests/: test_cli.py  test_cli_commands.py  test_config.py  test_integration.py
tests/core/: test_context.py  test_governance.py  test_init.py  test_orchestrator.py  test_planner.py
tests/execution/: test_adapter.py  test_branch.py  test_prompt.py  test_runner.py
tests/tracking/: test_events.py  test_markdown.py  test_models.py
tests/validation/: test_checks.py
